fixing some alignments

--- a/style2.css
+++ b/style2.css
@@ -45,7 +45,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 75vh;
+    height: 90vh;
     background-color: black;
 }
 .content4 {
